...
                                    .clipShape(Circle())
                                    .glassEffect(in: .circle)

                            }
                        }
                        .matchedTransitionSource(id: "openProfile", in: profileNamespace)
                        .accessibilityIdentifier("SearchBarActionButton")
                    }
                }
            }
        }
       
    }
...
