...
                        },
                        type: .outline,
                        style: .normal
                    )
                    .frame(maxWidth: .infinity, maxHeight: 44)
                    .disabled(controller.disableLoginButtons)
                    .accessibilityIdentifier("LoginAsGuest")
                    .accessibilityElement(children: .contain)
                    .accessibilityLabel(String(localized: "Login as a Guest"))
                }
                .padding(.top, 8)
                .padding(.bottom, 8)
                
...
